# email-openenv-final

./: Dockerfile  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py
graders/: email_graders.py  grader_easy.py  grader_hard.py  grader_medium.py
models/: action.py
server/: app.py
tasks/: task_easy.py  task_hard.py  task_medium.py
