[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "email_openenv"
version = "0.1.0"
description = "Email assistant OpenEnv"
authors = [{ name = "Rithika" }]

dependencies = [
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
